ToDo:
---------------------
* Add Option to store a user's password
* make Tray Windows for automagically started apps configurable
* Hooks must directly write to Service pipe
* on Win x64 detect x32 Executables on x64 hook (ShellExecute32->WoW->CreateProcess64)
* On ShellExec/IAT-Hook: Create Process suspended! Hooks must resume process.
* Create Inline Hook instead of IAT-Hook
* GUI for SwitchToUser
* Create a "Default" SuRunner for users that are not in "SuRunners"
* MAP network drives
* Checksums for "Always Yes" programs
* use IContextMenu2/IContextMenu to implement an Icon/Popup menu
* Console SuRun support
* LOG-File for SuRun activity

To be done in future:
---------------------
* Use Radio-Buttons for (normal/elevated) Auto-Magic
* Hide/Show all context menu entries consistently
* make all context menu entries dynamically with ShellExt 
  (E.g.: msi with popup-menu)

Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------
SuRun 1.2.0.9 - 2010-12-23
--------------------------
* NEW: In Windows 7 Explorer can be launched with elevated rights.
* NEW: The local System is allowed as user for Backup/Restore.
* NEW: If "Start the program automagically with elevated rights." and "NEVER 
  start this program with elevated rights." are both checked, SuRun directly 
  starts the program with the rights of the current user.
  (Automagic starts Application "non elevated" on "AutoExec" and "AutoCancel")
* NEW: SuRun's ShellExecute Hook let's non-"SuRunners" use SuRun's "Run as..."
* NEW: SuRun can be forced to store and use a user's real password. 
  This hopefully solves problems in domain networks.
* NEW: Polish resources by Junne. Thanks!